# SnapVLA

./: .gitignore  README.md  pyproject.toml
edge/: pyproject.toml  smoke_capture.py  stream_client.py
examples/: __init__.py
examples/panel_matching/: README.md  __init__.py  context.py  main.py  mock_data.py  scenarios.py  types.py
examples/panel_matching/stages/: __init__.py  contour_extract.py  sam3_segment.py  umeyama_match.py  undistort.py
scripts/: sync.sh
server/: inference_server.py  pyproject.toml  smoke_infer.py
server-vla/: ensure_model_patches.py  inference_server.py  pyproject.toml  smoke_infer.py
server-vla/model_patches/: modeling_prismatic.py
server-vla/prismatic/: __init__.py  pyproject.toml
server-vla/prismatic/training/: train_utils.py
server-vla/prismatic/vla/: constants.py
snapvla/: __init__.py
snapvla/common/: __init__.py  wire.py
snapvla/edge/: __init__.py  base.py  usb_camera.py
snapvla/pipeline/: README.md  __init__.py  base.py
snapvla/sensors/: README.md  __init__.py  base.py  realsense.py
snapvla/server/: __init__.py  contexts.py  stages.py  stages_registry.py  stages_vla.py
tests/: test_pipeline_smoke.py
