[project]
name = "snapvla-edge"
version = "0.1.0"
description = "SnapVLA edge runtime (Raspberry Pi camera capture + streaming client)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "snapvla",
    "opencv-python-headless>=4.9",
]

[tool.uv.sources]
snapvla = { path = "..", editable = true }
