[project]
name = "snapvla-server"
version = "0.1.0"
description = "SnapVLA server runtime (Windows + CUDA, VLM/VLA inference)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "snapvla",
    "torch>=2.7",
    "torchvision>=0.22",
    # Moondream2 remote code (revision 2024-08-26) breaks on transformers>=4.50 --
    # PreTrainedModel stopped inheriting GenerationMixin. Revisit when the model
    # repo updates its remote code.
    "transformers>=4.45,<4.50",
    "accelerate>=0.34",
    "einops>=0.7",
    "pillow>=10.0",
]

[tool.uv.sources]
snapvla = { path = "..", editable = true }
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
